<resources>
    <string name="app_name">MovieDB</string>

    <!--    Tabs-->
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>

    <!--    Menus-->
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>

    <!--    Search-->
    <string name="query_hint">Search by movie name</string>

    <!--    Error-->
    <string name="bad_request">Bad Request</string>
    <string name="unauthorized_user">Unauthorised User</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="connecting_server_error">Error Occur While Connecting Server</string>
    <string name="btn_no_data">No Data</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">No Internet Connection</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="retry">retry</string>
    <string name="no_data">Results could not be loaded</string>

    <!--    Movie-->
    <string name="votes_ui">%1$d votes</string>
    <string name="favorites">Favorites</string>


    <!--    Movie Detail-->
    <string name="movie_details">Movie Details</string>
    <string name="movie_desc">Movie Description</string>
    <string name="release_date">Release Date</string>
    <string name="spoken_languages">Spoken Languages</string>
    <string name="original_title">Original Title</string>
    <string name="details">Details</string>
    <string name="watch_movie">Watch Movie</string>
</resources>
