<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/upcomingFragment">

    <fragment
        android:id="@+id/popularFragment"
        android:name="com.ymo.ui.component.popular.PopularFragment"
        android:label="@string/popular"
        tools:layout="@layout/fragment_popular" >
        <action
            android:id="@+id/action_popularFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/upcomingFragment"
        android:name="com.ymo.ui.component.upcoming.UpcomingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_upcomingFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.ymo.ui.component.movie_detail.MovieDetailsFragment"
        android:label="@string/movie_details"
        tools:layout="@layout/fragment_movie_detail" >
        <action
            android:id="@+id/action_movieDetailFragment_to_upcomingFragment"
            app:destination="@id/upcomingFragment" />
        <argument
            android:name="movieId"
            app:argType="integer" />
        <argument
            android:name="isFav"
            app:argType="boolean" />
    </fragment>
</navigation>