<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_favorite_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:background="@drawable/bg_favorite_round_shape"
            android:padding="@dimen/spacing_small"
            android:src="@drawable/ic_favorite_border_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:background="@drawable/bg_top_rounded"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bottom_rounded_blue"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_bottom_rounded"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:paddingStart="@dimen/spacing_small"
                        android:paddingTop="@dimen/spacing_small"
                        android:textAppearance="?textAppearanceBody1"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry"
                        tools:text="Movie Title" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:paddingStart="@dimen/spacing_small"
                        android:paddingEnd="@dimen/spacing_small"
                        tools:ignore="RtlSymmetry">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/linearLayout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">


                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/vote_average"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="15sp"
                                    tools:text="8.7" />

                                <View
                                    android:id="@+id/view"
                                    android:layout_width="1dp"
                                    android:layout_height="15dp"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="10dp"
                                    android:background="@color/gray_light" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_status"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    tools:text="Released" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="@dimen/spacing_small"
                                android:layout_marginBottom="@dimen/spacing_small"
                                android:gravity="center">

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/genre"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:textSize="13sp"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    android:textColor="@color/colorPrimary"
                                    tools:text="Drama,Fantasy" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_vote_count"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                   android:gravity="end"
                                    android:layout_marginEnd="6dp"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    android:textSize="15sp"
                                    tools:text="100 voted" />
                            </LinearLayout>

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_tag_line"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textAppearance="?attr/textAppearanceCaption"
                                android:textSize="13sp"
                                android:textStyle="italic"
                                tools:text="Growing up is a beast." />
                        </LinearLayout>

                    </RelativeLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:foreground="?attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/spacing_small">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/movie_desc"
                                android:textAppearance="?textAppearanceBody1"
                                android:textStyle="bold" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/overview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:lineSpacingMultiplier="1.2"
                                android:textAppearance="?attr/textAppearanceCaption"
                                tools:text="Description" />
                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_small">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/details"
                            android:textAppearance="?textAppearanceBody1"
                            android:textStyle="bold"
                            tools:text="Details" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="left|center"
                                    android:layout_weight="1"
                                    android:text="@string/spoken_languages"
                                    android:textAppearance="?textAppearanceBody1"
                                    android:textStyle="bold" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_spoken_language"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="right|center"
                                    android:textAppearance="?textAppearanceBody1"
                                    tools:ignore="RtlHardcoded"
                                    tools:text="Original Language" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="left|center"
                                    android:layout_weight="1"
                                    android:text="@string/release_date"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    android:textStyle="bold" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tx_release"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="right|center"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    tools:text="Original Title" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/watch_movie"
                    android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large">

                <ImageView
                    android:id="@+id/cover_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loader_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>